--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,10 @@
   text-align: center;
   font-family: 'Fira Code', monospace;
   font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10rem;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 5rem;
 }
