--- a/src/App.scss
+++ b/src/App.scss
@@ -7,5 +7,9 @@
   gap: 10rem;
   justify-content: space-evenly;
   align-items: center;
-  padding-top: 5rem;
+  padding-bottom: 10rem;
+}
+
+a{
+  text-decoration: none;
 }
